# qwen_cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: CompilerWarnings.cmake  ProjectOptions.cmake
configs/evaluation/: smoke_eval.yaml
configs/inference/: default.yaml
configs/training/: lora_sft.yaml
docs/: ARCHITECTURE.md  roadmap.md
docs/architecture/: README.md
docs/datasets/: README.md
docs/deployment/: README.md
docs/training/: README.md
include/: tensor.h
include/backend/: backend_adapter.h  gguf_llamacpp_backend.h
include/cache/: CacheAllocator.h  CacheManager.h  KVCache.h
include/cli/: commands.h
include/engine/: decode.h  prefill.h
include/model/: attention.h  embedding.h  layer.h  mlp.h  model.h  model_config.h  model_weights.h  rms_norm.h  self-attention.h  transformer_block.h
include/ops/: attention.h  layernorm.h  matmul.h  softmax.h
include/runtime/: generation_config.h  inference_session.h  model_runner.h  sampling_config.h
include/service/: api_error.h  http_server.h
include/tokenizer/: special_tokens.h  tokenizer.h
models/adapters/: README.md
models/gguf/: README.md
models/hf/: README.md
models/manifests/: README.md  model.manifest.example.json
python/data_pipeline/: prepare_dataset.py
python/tools/: export_to_gguf.py
python/training/: train_lora.py
src/: CMakeLists.txt  tensor.cpp
src/backend/: gguf_llamacpp_backend.cpp
src/cache/: CacheAllocator.cpp  CacheManager.cpp  KVCache.cpp
src/cli/: commands.cpp  main.cpp
src/core/: README.md
src/engine/: decode.cpp  prefill.cpp
src/model/: attention.cpp  embedding.cpp  mlp.cpp  model.cpp  model_weights.cpp  rms_norm.cpp  self-attention.cpp  transformer_block.cpp
src/ops/: attention.cpp  matmul.cpp  softmax.cpp
src/runtime/: inference_session.cpp  model_runner.cpp
src/service/: http_server.cpp
src/tokenizer/: tokenizer.cpp
tests/: CMakeLists.txt  KVCache_test.cpp  attention_test.cpp  cache_allocator_test.cpp  cache_manager_test.cpp  decode_test.cpp  embedding_test.cpp  main_test.cpp  matmul_test.cpp  prefill_test.cpp  softmax_test.cpp  tensor_test.cpp
tests/e2e/: README.md
tests/integration/: README.md
tests/unit/: README.md
